[B]3.0.10~nightly12[/B]
- Fix View Typ (Ansichten werden nun auch auf den Folgeseiten korrekt angezeigt)

[B]3.0.10~nightly11[/B]
- Fix Trakt Bugfix (Benutzerauthorisierung wird nicht angezeigt)
    Der Trakt Benutzer wird nun korrekt angezeigt.
    ACHTUNG: ES IST ZWINGEND NOTWENDIG DASS JEDER BENUTZER TRAKT NEU AUTORISIERT! WIRD DIES NICHT GEMACHT WERDEN EINIGE 		TRAKT-OPTIONEN FEHLERHAFT SEIN!

[B]3.0.10~nightly10[/B]
 - New Indexpage: Movie-stream.eu

[B]3.0.10~nightly9[/B]
- Changed Vodster Key (for Netflix)

[B]3.0.10~nightly8[/B]
- Fix HDKino
- Kurz FAQ im Einstellungs Menü (settings.xml)

[B]3.0.10~nightly7[/B]
- Update settings.xml
- Update Netflix

[B]3.0.10~nightly6[/B]
- TMovie entfernt, Offline

[B]3.0.10~nightly5[/B]
- Update zu Amazon: Es nun möglich, im Menü zu wählen, ob das Amazon VOD oder das Amazon Addon durchsucht/verwendet werden soll

[B]3.0.10~nightly4[/B]
- Fix moviedream.ws - jetzt aber entgültig

[B]3.0.10~nightly3[/B]
- Fix moviedream.ws

[B]3.0.10~nightly2[/B]
- Fix moviedream.ws

[B]3.0.10~nightly1[/B]
- Fix hdfilme

[B]3.0.9[/B]
  26.02.2019
- Update Openload Pairing Hoster (sources.py)
- Option "Hoster ausschließen" hinzugefügt
	Die Option ermöglicht es einzelne Hoster auszuschließen ohne Einstellungen im URL-Resolver zu ändern
	Filter wird nicht auf Debrid-Dienste angewandt
- Amazon Suche verbessert
- Updates/Fixes (sources.py, settings.xml)
- Add Bald verfügbar Kategorie (tvshows/movies/navigator.py)
	Unter "Bald verfügbar" findet man eine Vorschau von Filmen/Serien die
	bald veröffentlicht werden (maximal 100, über Trakt realisiert). Zu
	beachten ist dass es bei sehr neuen Veröffentlichungen sein kann dass
	noch keine Informationen verfügbar sind.

[B]3.0.8.1[/B]
  14.02.2019
- Bug Fix s.to (es werden zu wenig HD-Streams angezeigt)
- Das ausblenden der Hosternamen etc. bei aktiviertem Autoplay ist jetzt einstellbar

[B]3.0.8[/B]
  13.02.2019
- Fix Kino.cx 