@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.lastship" version="3.0.10~nightly12" name="Lastship" provider-name="Lastship">
+<addon id="plugin.video.lastship" version="3.0.10~nightly13" name="Lastship" provider-name="Lastship">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="repository.lastship" version="1.0.2" />
@@ -37,6 +37,7 @@
 - Kurz FAQ im Menue
 - Fix Trakt Bugfix
 - Fix View Typ
+- Fanart/Poster Quelle Auswahlmoeglichkeit
 		</news>
 	</extension>
 </addon>
